--- a/src/app/section/ajouter-section/ajouter-section.component.html
+++ b/src/app/section/ajouter-section/ajouter-section.component.html
@@ -3,11 +3,11 @@
  
     <form [formGroup]="sectionForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <label for="code">Code:</label>
+        <label for="code" autocomplete="off">Code:</label>
         <input type="text" id="code" formControlName="codeSection">
       </div>
       <div class="form-group">
-        <label for="libelle">Libellé:</label>
+        <label for="libelle" autocomplete="off" >Libellé:</label>
         <input type="text" id="libelle" formControlName="libelleSection">
       </div>
       <button type="submit">Ajouter Section</button>
